--- a/body.css
+++ b/body.css
@@ -5,7 +5,7 @@ body {
     align-items: center;
     height: 100vh;
     margin: 0;
-    background: linear-gradient(45deg, #6a11cb, #2575fc);
+    background: linear-gradient(45deg, #6a11cb, white);
 }
 
 .calculator {
@@ -60,4 +60,8 @@ body {
 
 .zero {
     grid-column: span 2;
+}
+
+.fun{
+    background-color: orange;
 }
